modified:   ProjectMissArmagh.mkd

--- a/ProjectMissArmagh.mkd
+++ b/ProjectMissArmagh.mkd
@@ -26,7 +26,7 @@ monthly payment (15 yrs): 1k
 deposit 20%: 30k  
 monthly payment (15 yrs): 900
 
-## Option 2: buy 3 bedroom semi detached for whole family
+### Option 2: buy 3 bedroom semi detached for whole family
 
 [34 Cavanacaw Manor Armagh](https://www.propertypal.com/34-cavanacaw-manor-armagh/1002803)
 
@@ -37,7 +37,7 @@ Price: 190k
 deposit 10%: 19k  
 monthly payments (15 yrs): 1300 
 
-## Option 3: buy 4 bed detached for whole family
+### Option 3: buy 4 bed detached for whole family
 
 [45 Willowdean Markethill](https://www.propertypal.com/45-willowdean-markethill/1001708)  
 
